# fastapi-template

./: .gitignore  CLAUDE.md  README.md  main.py  mcp_servers.json  pyproject.toml  run.py
app/: config.py
app/agent/: dependencies.py  react.py
app/agent/langgraph/: checkpointer.py  dependencies.py  react.py  supervisor.py
app/mcp/: client.py  config.py  dependencies.py  router.py
app/provider/: openai.py
app/routers/: agent.py  items.py
app/schemas/: agent.py  item.py
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/api/: agent.ts  client.ts  items.ts  mcp.ts  types.ts
frontend/src/router/: index.ts
frontend/src/views/: AgentView.vue  ItemsView.vue  McpView.vue
tests/: conftest.py  test_health.py  test_items.py  test_mcp_server.py  test_openai_provider.py
