[project]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "mcp>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]
